--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,7 @@
 }
 .gamebtn{
     margin: 5px;
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 14pt;
+    font-weight: bold;
 }
 .bold{
     font-weight: bold;
