--- a/assets/css/particle.css
+++ b/assets/css/particle.css
@@ -1,12 +1,12 @@
 /* ---- reset ---- */
 
-body {
+/* body {
   margin: 0;
   font:normal 75% Arial, Helvetica, sans-serif;
-}
+} */
 
 canvas {
-  display: block;
+  /* display: block; */
   vertical-align: bottom;
 }
 
@@ -15,7 +15,7 @@ canvas {
 #particles-js {
   position: absolute;
   width: 100%;
-  height: 110%;
+  height: 150%;
   background-color: black;
   background-image: url("");
   background-repeat: no-repeat;
@@ -25,12 +25,12 @@ canvas {
 
 /* ---- stats.js ---- */
 
-.count-particles{
+/* .count-particles{
   background: #000022;
   position: absolute;
-  top: 48px;
+  top: 4px;
   left: 0;
-  width: 80px;
+  width: 8px;
   color: #13E8E9;
   font-size: .8em;
   text-align: left;
@@ -57,4 +57,4 @@ canvas {
 
 .count-particles{
   border-radius: 0 0 3px 3px;
-}
+} */
